# protein_classification

./: LICENSE  README.md  data_stats.json  data_stats_biosr.json  pyproject.toml
notebooks/: interactive_eval.ipynb
scripts/: check_param_in_exp.py  compute_data_stats.py  evaluate.py  get_metric_from_exp.py  lambdaSplit_eval.py  train.py  train_biosr.py
src/protein_classification/: lightning.py  train.py
src/protein_classification/config/: __init__.py  algorithm.py  architecture.py  data.py  losses.py  training.py
src/protein_classification/data/: __init__.py  augmentations.py  biosr.py  cellatlas.py  dataset.py  in_memory_dataset.py  lambdaSplit_preds_dataset.py  preprocessing.py  utils.py  zarr_dataset.py
src/protein_classification/losses/: __init__.py  loss.py  loss_utils.py
src/protein_classification/model/: __init__.py  densenet.py  layers.py  lightning.py
src/protein_classification/utils/: callbacks.py  evaluation.py  info.py  io.py  running_stats.py  typing.py
