# https://peps.python.org/pep-0517/

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
# read more about configuring hatch at:
# https://hatch.pypa.io/latest/config/build/

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# https://peps.python.org/pep-0621/
[project]
name = "protein_classification"
dynamic = ["version"]
description = "Classifying biological structures based on their morphology using Deep Learning."
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = 'Federico Carrara', email = 'federico.carrara@fht.org' },
]
repository = "https://github.com/federico-carrara/protein_classification"
keywords = ["classification", "microscopy", "biology", "deep learning", "morphology"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
    "Operating System :: OS Independent"
]
requires-python = ">=3.9"
dependencies = []